Updated notebook why geometric integration

--- a/whyGeometricIntegration.ipynb
+++ b/whyGeometricIntegration.ipynb
@@ -1,6 +1,91 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Why do we need geometric numerical methods?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have seen that \"classical\" Runge-Kutta methods are not so hard to define. Furthermore, one can define Runge-Kutta methods that are accurate to any order desired. Why do we even need to look into other methods or select particular families of Runge-Kutta methods for some problems?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes one is not just interested in producing an accurate approximate solution, but also in reproducing some known qualitiative property of the target solution. We will soon see some of these properties worth preserving in more detail, but a typical example we can think of is energy preservation. There are several dynamical system that admit a conservation law, and it could happen that not reproducing such a conservation law discretely leads to solutions that are not interpretable or reliable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The methods that are built to preserve some known property of the target solution are called **geometric** or **structure-preserving**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will explore in quite some detail methods that\n",
+    "- preserve an energy function,\n",
+    "- preserve the symplectic form of $\\mathbb{R}^{2d}$,\n",
+    "- preserve the non-expansive nature of the approximated solutions.\n",
+    "\n",
+    "First, let us look at what happens when we approximate the solutions of the simple harmonic oscillator with the explicit Euler method."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us consider the second-order differential equation $\\ddot{x}(t) = -x(t)$, which can be rewritten as\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "\\dot{x}(t) = v(t) \\\\\n",
+    "\\dot{v}(t) = -x(t).\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "This system conserves the mechanical energy $E(x,v)=\\frac{x^2+v^2}{2}$ since\n",
+    "$$\n",
+    "\\frac{d}{dt}E(x(t),v(t))=x(t)\\dot{x}(t)+v(t)\\dot{v}(t) = x(t)v(t)-v(t)x(t)=0.\n",
+    "$$\n",
+    "Let us apply the explicit Euler method to this equation and see how the energy $E$ changes:\n",
+    "$$\n",
+    "x_{n+1} = x_n + \\Delta t \\, v_n,\\\\\n",
+    "v_{n+1} = v_n - \\Delta t \\, x_n.\n",
+    "$$\n",
+    "If we compute $E(x_{n+1},v_{n+1})$ we find\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "E(x_{n+1},v_{n+1}) &= \\frac{1}{2}\\left(x_n^2+v_n^2 + \\Delta t^2(x_n^2+v_n^2) +2\\Delta tx_nv_n - 2\\Delta t v_nx_n\\right)\\\\\n",
+    "&=E(x_n,v_n) + \\Delta t^2\\,E(x_n,v_n) = (1+\\Delta t^2)E(x_n,v_n)>E(x_n,v_n).\n",
+    "\\end{split}\n",
+    "$$\n",
+    "\n",
+    "Thus, we see that the Hamiltonian energy is not conserved by the explicit Euler method, but is increased at each and every step. Moreover, the extent to which it is changed depends on the local truncation error of the method, since it is proportional to $\\Delta t^2$. \n",
+    "\n",
+    "This fact that a smooth enough first integral $E:\\mathbb{R}^d\\to\\mathbb{R}$ of the vector field $\\mathcal{F}\\in\\mathfrak{X}(\\mathbb{R}^d)$ is preserved up to the local truncation error by a one-step method is true in general. In fact,\n",
+    "$$\n",
+    "E(\\mathbf{x}_n)=E(\\phi^{\\Delta t}_{\\mathcal{F}}(\\mathbf{x}_n)) = E(\\varphi^{\\Delta t}_{\\mathcal{F}}(\\mathbf{x}_n) + \\mathcal{O}(\\Delta t^{p+1})) = E(\\varphi^{\\Delta t}_{\\mathcal{F}}(\\mathbf{x}_n)) + \\mathcal{O}(\\Delta t^{p+1}).\n",
+    "$$\n",
+    "\n",
+    "**EXERCISE** Repeat this calculation with the implicit Euler method, defined as $$\\mathbf{x}_{n+1} = \\mathbf{x}_n + \\Delta t\\mathcal{F}(\\mathbf{x}_{n+1}).$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us now check what happens with some other methods with a numerical experiment. We will see why some methods behave better than others in the upcoming parts of the course."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
