Added open in colab button to geometric integration notebook

--- a/whyGeometricIntegration.ipynb
+++ b/whyGeometricIntegration.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/15LvpZEaXO94PAzF55jHrZagEtm6hsB38?usp=sharing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Why do we need geometric numerical methods?"
    ]
   },
