--- a/whyGeometricIntegration.ipynb
+++ b/whyGeometricIntegration.ipynb
@@ -18,14 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have seen that \"classical\" Runge-Kutta methods are not so hard to define. Furthermore, one can define Runge-Kutta methods that are accurate to any order desired. Why do we even need to look into other methods or select particular families of Runge-Kutta methods for some problems?"
+    "We have seen that \"classical\" Runge-Kutta methods are not so hard to define. Furthermore, one can define Runge-Kutta methods that are accurate to any desired order. Why do we even need to look into other methods or select particular families of Runge-Kutta methods for some problems?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes one is not just interested in producing an accurate approximate solution, but also in reproducing some known qualitiative property of the target solution. We will soon see some of these properties worth preserving in more detail, but a typical example we can think of is energy preservation. There are several dynamical system that admit a conservation law, and it could happen that not reproducing such a conservation law discretely leads to solutions that are not interpretable or reliable."
+    "Sometimes one is not just interested in producing an accurate approximate solution, but also in reproducing a known qualitiative property of the target solution. We will soon see some of these properties worth preserving in more detail, but a typical example we can think of is energy preservation. There are several dynamical system that admit a conservation law, and it could happen that not reproducing such a conservation law discretely leads to solutions that are not interpretable or reliable."
    ]
   },
   {
@@ -41,7 +41,7 @@
    "source": [
     "We will explore in quite some detail methods that\n",
     "- preserve an energy function,\n",
-    "- preserve the symplectic form of $\\mathbb{R}^{2d}$,\n",
+    "- preserve the canonical symplectic form of $\\mathbb{R}^{2d}$,\n",
     "- preserve the non-expansive nature of the approximated solutions.\n",
     "\n",
     "First, let us look at what happens when we approximate the solutions of the simple harmonic oscillator with the explicit Euler method."
@@ -64,25 +64,25 @@
     "$$\n",
     "Let us apply the explicit Euler method to this equation and see how the energy $E$ changes:\n",
     "$$\n",
-    "x_{n+1} = x_n + \\Delta t \\, v_n,\\\\\n",
-    "v_{n+1} = v_n - \\Delta t \\, x_n.\n",
+    "x_{n+1} = x_n + h \\, v_n,\\\\\n",
+    "v_{n+1} = v_n - h \\, x_n.\n",
     "$$\n",
     "If we compute $E(x_{n+1},v_{n+1})$ we find\n",
     "$$\n",
     "\\begin{split}\n",
-    "E(x_{n+1},v_{n+1}) &= \\frac{1}{2}\\left(x_n^2+v_n^2 + \\Delta t^2(x_n^2+v_n^2) +2\\Delta tx_nv_n - 2\\Delta t v_nx_n\\right)\\\\\n",
-    "&=E(x_n,v_n) + \\Delta t^2\\,E(x_n,v_n) = (1+\\Delta t^2)E(x_n,v_n)>E(x_n,v_n).\n",
+    "E(x_{n+1},v_{n+1}) &= \\frac{1}{2}\\left(x_n^2+v_n^2 + h^2(x_n^2+v_n^2) +2hx_nv_n - 2h v_nx_n\\right)\\\\\n",
+    "&=E(x_n,v_n) + h^2\\,E(x_n,v_n) = (1+h^2)E(x_n,v_n)>E(x_n,v_n).\n",
     "\\end{split}\n",
     "$$\n",
     "\n",
-    "Thus, we see that the Hamiltonian energy is not conserved by the explicit Euler method, but is increased at each and every step. Moreover, the extent to which it is changed depends on the local truncation error of the method, since it is proportional to $\\Delta t^2$. \n",
+    "Thus, we see that the Hamiltonian energy is not conserved by the explicit Euler method, but is increased at each and every step. Moreover, the extent to which it is changed depends on the local truncation error of the method, since it is proportional to $h^2$. \n",
     "\n",
     "This fact that a smooth enough first integral $E:\\mathbb{R}^d\\to\\mathbb{R}$ of the vector field $\\mathcal{F}\\in\\mathfrak{X}(\\mathbb{R}^d)$ is preserved up to the local truncation error by a one-step method is true in general. In fact,\n",
     "$$\n",
-    "E(\\mathbf{x}_n)=E(\\phi^{\\Delta t}_{\\mathcal{F}}(\\mathbf{x}_n)) = E(\\varphi^{\\Delta t}_{\\mathcal{F}}(\\mathbf{x}_n) + \\mathcal{O}(\\Delta t^{p+1})) = E(\\varphi^{\\Delta t}_{\\mathcal{F}}(\\mathbf{x}_n)) + \\mathcal{O}(\\Delta t^{p+1}).\n",
+    "E(\\mathbf{x}_n)=E(\\phi^{h}_{\\mathcal{F}}(\\mathbf{x}_n)) = E(\\varphi^{h}_{\\mathcal{F}}(\\mathbf{x}_n) + \\mathcal{O}(h^{p+1})) = E(\\varphi^{h}_{\\mathcal{F}}(\\mathbf{x}_n)) + \\mathcal{O}(h^{p+1}).\n",
     "$$\n",
     "\n",
-    "**EXERCISE** Repeat this calculation with the implicit Euler method, defined as $$\\mathbf{x}_{n+1} = \\mathbf{x}_n + \\Delta t\\mathcal{F}(\\mathbf{x}_{n+1}).$$ "
+    "**EXERCISE** Repeat this calculation with the implicit Euler method, defined as $$\\mathbf{x}_{n+1} = \\mathbf{x}_n + h\\mathcal{F}(\\mathbf{x}_{n+1}).$$ "
    ]
   },
   {
